完善任务上传接口

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ lmdeploy==0.7.0
 ultralytics==8.3.73
 fastapi==0.115.8
 uvicorn[standard]==0.34.0
+python-multipart==0.0.20
+fastapi-cache2==0.2.2
+pickledb==1.2
 
 py-cpuinfo==9.0.0
 deepspeed==0.15.0 # for windows, download from https://pypi.org/project/deepspeed/0.15.0/#files
