--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pickledb==1.3.2
 # language model requirements
 langchain==0.3.18
 langchain_community==0.3.17
+langchain_openai==0.3.4
 duckduckgo-search==7.3.2
 
 py-cpuinfo==9.0.0
