--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ uvicorn[standard]==0.34.0
 python-multipart==0.0.20
 fastapi-cache2==0.2.2
 pickledb==1.3.2
+sse-starlette==2.2.1
 
 # language model requirements
 langchain==0.3.18
