--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "InternVL"]
-	path = InternVL
-	url = https://github.com/OpenGVLab/InternVL.git
+[submodule "Ovis"]
+	path = Ovis
+	url = https://github.com/AIDC-AI/Ovis.git
