--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-# conda create 
-# torch==2.4.0
 huggingface_hub==0.29.3
 # ultralytics==8.3.73
 requests==2.32.3
+numpy==1.26.2
+py-cpuinfo==9.0.0
+ninja==1.11.1.3
+# deepspeed==0.16.4
 
 # $env:HF_ENDPOINT = "https://hf-mirror.com"
 # Download Mode: huggingface-cli download --resume-download AIDC-AI/Ovis2-4B --local-dir ./model
@@ -20,6 +22,9 @@ langchain==0.3.20
 langchain_community==0.3.19
 langchain_openai==0.3.8
 
+-r Ovis/requirements.txt
+
+-e Ovis/.
 
 # optional
 # flash-attn==2.7.0.post2 # GET it from https://huggingface.co/lldacing/flash-attention-windows-wheel/tree/main
